--- a/corrective_rag copy 2.ipynb
+++ b/corrective_rag copy 2.ipynb
@@ -108,13 +108,13 @@
     "llm = ChatOllama(model=local_llm, format=\"json\", temperature=0)\n",
     "\n",
     "prompt = PromptTemplate(\n",
-    "    template=\"\"\"You are a grader assessing relevance of a retrieved document to a user question. \\n \n",
-    "    Here is the retrieved document: \\n\\n {document} \\n\\n\n",
-    "    Here is the user question: {question} \\n\n",
-    "    If the document contains keywords related to the user question, grade it as relevant. \\n\n",
-    "    It does not need to be a stringent test. The goal is to filter out erroneous retrievals. \\n\n",
-    "    Give a binary score 'yes' or 'no' score to indicate whether the document is relevant to the question. \\n\n",
-    "    Provide the binary score as a JSON with a single key 'score' and no premable or explanation.\"\"\",\n",
+    "    template=\"\"\"Vous êtes un évaluateur évaluant la pertinence d'un document récupéré par rapport à une question d'un utilisateur. \\n \n",
+    "    Voici le document récupéré : \\n\\n {document} \\n\\n\n",
+    "    Voici la question de l'utilisateur : {question} \\n\n",
+    "    Si le document contient des mots-clés liés à la question de l'utilisateur, notez-le comme pertinent. \\n\n",
+    "    Il n est pas nécessaire que ce soit un test rigoureux. Le but est de filtrer les récupérations erronées. \\n\n",
+    "    Donnez un score binaire 'yes' ou 'no' pour indiquer si le document est pertinent par rapport à la question. \\n\n",
+    "    Fournissez le score binaire au format JSON avec un « score » à clé unique et sans prémisse ni explication.\"\"\",\n",
     "    input_variables=[\"question\", \"document\"],\n",
     ")\n",
     "\n",
@@ -209,7 +209,7 @@
     "    state_dict=state[\"keys\"]\n",
     "    question = state_dict[\"question\"]\n",
     "\n",
-    "    # Retrieval\n",
+    "    # Récupération\n",
     "    documents = retriever.get_relevant_documents(question)\n",
     "    return {\"keys\":{\"documents\": documents, \"question\": question}}\n",
     "\n",
@@ -279,7 +279,7 @@
     "\n",
     "    retrieval_grader = prompt | llm | JsonOutputParser()\n",
     "\n",
-    "    # Score each doc\n",
+    "    # Score chaque document\n",
     "    filtered_docs = []\n",
     "    search =\"No\"\n",
     "    for d in documents:\n",
@@ -320,7 +320,7 @@
     "    question = state_dict[\"question\"]\n",
     "    documents = state_dict[\"documents\"]\n",
     "\n",
-    "    # Re-write question\n",
+    "    # Ré-écriture de la question\n",
     "    re_write_prompt = PromptTemplate(\n",
     "        template=\"\"\"Vous êtes un rédacteur de questions qui convertit une question d'entrée en une meilleure version optimisée \\n\n",
     "            pour la récupération du vectorstore. Examinez l'entrée et essayez de raisonner sur l'intention sémantique sous-jacente et de formuler une question améliorée. \\n\n",
@@ -388,14 +388,13 @@
     "    search= state_dict[\"run_web_search\"]\n",
     "\n",
     "    if search ==\"Yes\":\n",
-    "        # All documents have been filtered check_relevance\n",
-    "        # We will re-generate a new query\n",
+    "        \n",
     "        print(\n",
     "            \"---DECISION: TRANSFORM QUERY and RUN WEB SEARCH---\"\n",
     "        )\n",
     "        return \"transform_query\"\n",
     "    else:\n",
-    "        # We have relevant documents, so generate answer\n",
+    "        \n",
     "        print(\"---DECISION: GENERATE---\")\n",
     "        return \"generate\"\n",
     "\n"
@@ -412,14 +411,14 @@
     "\n",
     "workflow = StateGraph(GraphState)\n",
     "\n",
-    "# Define the nodes\n",
+    "# Definition des noeuds\n",
     "workflow.add_node(\"retrieve\", retrieve)  # retrieve\n",
     "workflow.add_node(\"grade_documents\", grade_documents)  # grade documents\n",
     "workflow.add_node(\"generate\", generate)  # generatae\n",
     "workflow.add_node(\"transform_query\", transform_query)  # transform_query\n",
     "workflow.add_node(\"web_search\", web_search)  # web search\n",
     "\n",
-    "# Build graph\n",
+    "# Construction du graphique\n",
     "workflow.set_entry_point(\"retrieve\")\n",
     "workflow.add_edge(\"retrieve\", \"grade_documents\")\n",
     "workflow.add_conditional_edges(\n",
@@ -434,7 +433,7 @@
     "workflow.add_edge(\"web_search\", \"generate\")\n",
     "workflow.add_edge(\"generate\", END)\n",
     "\n",
-    "# Compile\n",
+    "# Compilation\n",
     "app = workflow.compile()"
    ]
   },
@@ -466,17 +465,15 @@
     }
    ],
    "source": [
-    "# Run\n",
-    "from pprint import pprint\n",
+    "# Test\n",
     "inputs = {\n",
     "    \"keys\":{\n",
     "        \"question\": \"Comment fonctionne une cohabitation ?\"}\n",
     "}\n",
     "for output in app.stream(inputs):\n",
     "    for key, value in output.items():\n",
-    "        # Node\n",
+    "        # Noeud\n",
     "        pprint(f\"Noeud '{key}':\")\n",
-    "        # Optional: print full state at each node\n",
     "        # pprint.pprint(value[\"keys\"], indent=2, width=80, depth=None)\n",
     "    pprint(\"\\n---\\n\")\n",
     "\n"
@@ -542,22 +539,18 @@
     }
    ],
    "source": [
-    "from pprint import pprint\n",
-    "\n",
-    "# Run\n",
+    "#Test 2\n",
     "inputs = {\n",
     "    \"keys\":{\n",
     "        \"question\": \"quel est le nom du personnage principal dans le film sorti écemment Dune ?\"}\n",
     "}\n",
     "for output in app.stream(inputs):\n",
     "    for key, value in output.items():\n",
-    "        # Node\n",
-    "        pprint(f\"Node '{key}':\")\n",
-    "        # Optional: print full state at each node\n",
-    "        # pprint.pprint(value[\"keys\"], indent=2, width=80, depth=None)\n",
+    "         pprint(f\"Node '{key}':\")\n",
+    "        \n",
     "    pprint(\"\\n---\\n\")\n",
     "\n",
-    "# Final generation\n",
+    "\n",
     "\n",
     "print(\"\\n Réponse :\",value[\"keys\"][\"generation\"])"
    ]
